# raspberry-pi-expirements

./: LICENSE  README.md
led/PixelPi/: pixelpi.py
led/native-playground/: CMakeLists.txt  colour.cpp  colour.h  global.h  main_playground.cpp  movie.cpp  pixelpi-convertor.py  ws2801_strip.cpp  ws2801_strip.h
